# http-grpc-mux

./: .bazelrc  .gitignore  BUILD.bazel  Makefile  Makefile.conf.sample  README.md  WORKSPACE  go.mod  go.sum  mux.tf  rest-client.http
.devcontainer/: Dockerfile.go  devcontainer.json
api/: BUILD.bazel  service.proto
gloo/: virtualservice-0.2x.x.yaml  virtualservice-1.0.0.yaml  virtualservice-knative-0.2x.x.yaml
http-grpc-mux/: Chart.yaml  values.yaml
http-grpc-mux/templates/: _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
http-grpc-mux/templates/tests/: test-connection.yaml
k8s/: service.yaml  virtualservice.yaml
knative/: service.yaml
libs/kncloudevents/: BUILD.bazel  kncloudevents.go
src/: main.go
tooling/bazel/private/: repositories.bzl
tooling/docker/: Dockerfile.sandbox  bazelrc.sandbox
tooling/minikube/: setup-cluster.sh  setup-minikube.sh
